--- a/Doc/Notebooks/GephiStreaming_UserGuide.ipynb
+++ b/Doc/Notebooks/GephiStreaming_UserGuide.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7dd498ea7bdbffe648d79d65aa8f29c7f7e53c6947149e89e3b79ec603e77306"
+  "signature": "sha256:be4b1a0f5d62af49c429009c572ea8a63f46d3af9664447ea192347cbb1e46ba"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -73,7 +73,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -92,7 +92,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -122,19 +122,19 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "PLM(balanced,) detected communities in 0.04398536682128906 [s]\n",
+        "PLM(balanced,,parallel coarsening) detected communities in 0.22378015518188477 [s]\n",
         "solution properties:\n",
         "-------------------  ----------\n",
-        "# communities         5\n",
-        "min community size   29\n",
-        "max community size   82\n",
-        "avg. community size  60\n",
-        "modularity            0.0915229\n",
+        "# communities         7\n",
+        "min community size   17\n",
+        "max community size   65\n",
+        "avg. community size  42.8571\n",
+        "modularity            0.0986376\n",
         "-------------------  ----------\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -145,7 +145,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -153,6 +153,53 @@
      "source": [
       "The node attribute \"community\" can now be selected and used in gephi, for partitioning or any other desired scenario."
      ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Exporting edges values"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Just like node values, we can export edge values. After graph creation, each edge is assigned an integer id that is then used to access arbitrary attribute vectors, so any python list can be exported to gephi. In the following example, we assign an even number edge and export that attribute to gephi."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "G.addEdge(0, 1)    #We want to make sure this specific edge exists.\n",
+      "edgeAttribute = [2*x for x in range(0, G.upperEdgeIdBound())]\n",
+      "client.exportEdgeValues(G, edgeAttribute, \"myEdgeAttribute\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Edge ids an easily be retrieved using the edgeId(u, v) method in graph. Let's change of one edge and export the attribute again."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "edgeAttribute[G.edgeId(0, 1)] = 1\n",
+      "client.exportEdgeValues(G, edgeAttribute, \"myEdgeAttribute\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -179,14 +226,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
