--- a/Doc/Notebooks/BackboneStatistics.ipynb
+++ b/Doc/Notebooks/BackboneStatistics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4cb31b64a1e70970e052e05996d0aafe17e5858e0278d6eac7102241eb05f3e1"
+  "signature": "sha256:22a0daa48367ea1072ae001719386b4632e41a02287ac98768b97f2a1b649960"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -650,7 +650,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "gc = gephi.streaming.GephiStreamingClient()"
+      "gc = gephi.streaming.GephiStreamingClient()\n",
+      "G = readGraph(\"../../scripts/BackboneEvaluation/input/Tennessee95.graphml\", Format.GraphML)\n",
+      "G.indexEdges()"
      ],
      "language": "python",
      "metadata": {},
@@ -661,10 +663,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = readGraph(\"../../scripts/BackboneEvaluation/input/Tennessee95.graphml\", Format.GraphML)\n",
-      "G.indexEdges()\n",
-      "c1 = community.detectCommunities(G)\n",
-      "c2 = community.detectCommunities(G)\n",
+      "c1 = community.detectCommunities(G, algo=community.PLM(refine=False, par='none'))\n",
+      "c2 = community.detectCommunities(G, algo=community.PLM(refine=False, par='none'))\n",
       "\n",
       "_nmi = community.NMIDistance()\n",
       "nmi = _nmi.getDissimilarity(G, c1, c2)\n",
@@ -677,16 +677,16 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "PLM(balanced,,parallel coarsening) detected communities in 3.8032186031341553 [s]\n",
+        "PLM(none,,parallel coarsening) detected communities in 2.91845440864563 [s]\n",
         "solution properties:\n",
-        "-------------------  -----------\n",
-        "# communities          13\n",
+        "-------------------  ----------\n",
+        "# communities          16\n",
         "min community size      2\n",
-        "max community size   2693\n",
-        "avg. community size  1306.08\n",
-        "modularity              0.408075\n",
-        "-------------------  -----------\n",
-        "PLM(balanced,,parallel coarsening) detected communities in 2.2796199321746826 [s]"
+        "max community size   3627\n",
+        "avg. community size  1061.19\n",
+        "modularity              0.40998\n",
+        "-------------------  ----------\n",
+        "PLM(none,,parallel coarsening) detected communities in 2.8785839080810547 [s]"
        ]
       },
       {
@@ -696,17 +696,17 @@
         "\n",
         "solution properties:\n",
         "-------------------  ----------\n",
-        "# communities           8\n",
+        "# communities          16\n",
         "min community size      2\n",
-        "max community size   5235\n",
-        "avg. community size  2122.38\n",
-        "modularity              0.41166\n",
+        "max community size   3627\n",
+        "avg. community size  1061.19\n",
+        "modularity              0.40998\n",
         "-------------------  ----------\n",
-        "0.5089012210857415\n"
+        "0.0\n"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
