--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e4c43bba8071d43f141a130b58d2af5dace2a06ce8121315b8a40be938d07310"
+  "signature": "sha256:7dac29f37ac7b0e23e5e103b8756bbb1690c41ca82fc49b1a17bf0e1e8a77571"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,23 +12,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from NetworKit import *"
+      "from networkit import *"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = readGraph(\"../../../ComplexNetworkBackbones/evaluation/input/Yale4.graphml\", Format.GraphML)"
+      "G = readGraph(\"../../scripts/BackboneEvaluation/input/Caltech36.graphml\", Format.GraphML)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -43,11 +43,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "8578 405450\n"
+        "769 16656\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
